Switch model to bn-optimized version, update docs
Slightly improves resource usage. End results are the same.
Closes #39.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-gpu = ["onnxruntime-gpu"]
+cuda = ["onnx", "onnxruntime-cuda"]
+directml = ["onnx", "onnxruntime-directml"]
+openvino = ["onnx", "onnxruntime-openvino"]
 
 [project.scripts]
 deface = "deface.deface:main"
